listings html done

--- a/src/sass/_content-area.scss
+++ b/src/sass/_content-area.scss
@@ -2,7 +2,7 @@
   background: $grey;
   width: 30%;
   min-width: 300px;
-  
+
   .inside {
     padding: 20px;
   }
@@ -53,5 +53,8 @@
       }
     }
   }
+}
 
+#listings {
+  
 }
