--- a/src/sass/_content-area.scss
+++ b/src/sass/_content-area.scss
@@ -1,7 +1,8 @@
 #filter {
   background: $grey;
   width: 30%;
-  min-width: 300px;
+  max-width: 300px;
+  float: left;
 
   .inside {
     padding: 20px;
@@ -56,5 +57,53 @@
 }
 
 #listings {
-  
+  width: 70%;
+  display: inline-block;
+  padding: 15px;
+  background: $offwhite;
+
+  .search-area {
+    input[type="text"] {
+      width: 70%;
+      background: transparent;
+      font-size: 2rem;
+      border: none;
+      border-bottom: 2px solid $lightgrey;
+      margin-bottom: 20px;
+      color: $lightgrey;
+    }
+  }
+
+  .sortby-area {
+    margin-bottom: 20px;
+
+    .results {
+      color: $lightgrey;
+      font-size: 0.8rem;
+      display: inline-block;
+    }
+    .sort-options {
+      float: right;
+      
+      select {
+        font-size: 0.9rem;
+        font-weight: 300;
+        border: 1px solid $lightgrey;
+        background: trasparent;
+        padding: 1px;
+        display: inline-block;
+        margin-right: 15px;
+        vertical-align: top;
+      }
+
+      .view {
+        display: inline-block;
+
+        .fa {
+          margin-right: 15px;
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
 }
