--- a/src/sass/_content-area.scss
+++ b/src/sass/_content-area.scss
@@ -1,3 +1,8 @@
+#content-area {
+  overflow: auto;
+  width: 100%;
+}
+
 #filter {
   background: $grey;
   width: 30%;
@@ -106,4 +111,159 @@
       }
     }
   }
+  .listings-results {
+    margin-bottom: 60px;
+
+    .listing {
+      background: #fff;
+      width: 33.33%;
+      
+      -webkit-box-shadow: 0 9px 54px -4px rgba(224,224,224,1);
+      -moz-box-shadow: 0 9px 54px -4px rgba(224,224,224,1);
+      box-shadow: 0 9px 54px -4px rgba(224,224,224,1);
+      
+      border-radius: 5px;
+
+      .listing-img {
+        background: url('https://assets.architecturaldesigns.com/plan_assets/324992268/large/23703JD_01_1553616680.jpg?1553616681') no-repeat center center; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+
+        min-height: 200px;
+
+        -webkit-border-top-left-radius: 5px;
+        -webkit-border-top-right-radius: 5px;
+        -moz-border-radius-topleft: 5px;
+        -moz-border-radius-topright: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+
+        color: white;
+        padding: 15px;
+        position: relative;
+
+        &:hover{
+          .details {
+            opacity: 1;
+          }
+          .address {
+            opacity: 0;
+          }
+        }
+
+        .address{
+          position: absolute;
+          bottom: 20px;
+          opacity: 1;
+          transition: all .3s ease-in-out;
+        }
+
+        .details {
+          opacity: 0;
+          transition: all .3s ease-in-out;
+
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          padding: 30px;
+
+          /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#431bba+0,a33de2+100 */
+          background: rgb(67,27,186); /* Old browsers */
+          background: -moz-linear-gradient(-45deg,  rgba(67,27,186,0.8) 0%, rgba(163,61,226,0.8) 100%); /* FF3.6-15 */
+          background: -webkit-linear-gradient(-45deg,  rgba(67,27,186,0.8) 0%,rgba(163,61,226,0.8) 100%); /* Chrome10-25,Safari5.1-6 */
+          background: linear-gradient(135deg,  rgba(67,27,186,0.8) 0%,rgba(163,61,226,0.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#431bba', endColorstr='#a33de2',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+          -webkit-border-top-left-radius: 5px;
+          -webkit-border-top-right-radius: 5px;
+          -moz-border-radius-topleft: 5px;
+          -moz-border-radius-topright: 5px;
+          border-top-left-radius: 5px;
+          border-top-right-radius: 5px;
+
+          .user-img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            border: 2px solid white;
+            display: inline-block;
+
+            background: url('https://assets.architecturaldesigns.com/plan_assets/324992268/large/23703JD_01_1553616680.jpg?1553616681') no-repeat center center; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+          }
+          .user-details {
+            display: inline-block;
+            vertical-align: top;
+            margin-left: 20px;
+
+            .user-name {
+              color: rgba(255, 255, 255, 1);
+              display: block;
+              font-size: 0.9rem;
+              font-weight: 300;
+            }
+            .post-date {
+              color: rgba(255, 255, 255, 0.7);
+              font-size: 0.9rem;
+              display: block;
+            }
+          }
+
+          .listing-details {
+            margin-top: 20px;
+
+            .fa {
+              display: inline-block;
+              font-size: 20px;
+              margin-right: 25px;
+            }
+            span {
+              display: inline-block;
+              font-size: 0.8rem;
+              font-weight: 300;
+              vertical-align: top;
+              position: relative;
+              top: 3px;
+            }
+            .floor-space {
+              margin-bottom: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.view-btn {
+  background: black;
+  padding: 8px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  text-align: center;
+  margin-top: 10px;
+  max-width: 150px;
+  transition: background 0.3s ease-in-out;
+  &:hover {
+    background: $pink;
+    cursor: pointer;
+  }
+}
+
+.col-md-3 {
+  width: 25%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.col-md-9 {
+  width: 75%;
+  display: inline-block;
 }
