--- a/src/sass/_content-area.scss
+++ b/src/sass/_content-area.scss
@@ -309,9 +309,19 @@
   display: inline-block;
   vertical-align: top;
   padding: 0 10px;
+  transition: all .3s ease-in;
 }
 
 .col-md-9 {
   width: 75%;
   display: inline-block;
+}
+
+.col-lg-6 {
+  width: 50%;
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 10px;
+  margin-bottom: 15px;
+  transition: all .3s ease-in;
 }
